--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
-
+In each lab folder, the main content is in the file 'lab1.ipynb', 'lab2.ipynb', etc.
+Other pictures and python files are supplementary materials.
